--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,18 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="twitter:card" content="Deutschland Hilft" />
+    <meta name="twitter:site" content="@dehilft.de" />
+    <meta name="twitter:title" content="Deutschland Hilft" />
+    <meta
+      name="twitter:description"
+      content="Flüchtlinge sind laut unserem aktuellen Kenntnisstand auf der Suche
+    nach Sicherheit und Frieden. Egal, ob du Sachspenden, Zeit oder aber
+    auch ein vorläufiges Zuhause anbieten kannst, Deutschland hilft listet
+    passende Ansprechpartner:innen auf."
+    />
+    <meta name="twitter:image" content="https://example.com/test.jpg" />
+    <meta name="twitter:url" content="https://dehilft.de" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,7 +37,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>DE hilft</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
