--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     auch ein vorläufiges Zuhause anbieten kannst, Deutschland hilft listet
     passende Ansprechpartner:innen auf."
     />
-    <meta name="twitter:image" content="https://example.com/test.jpg" />
+    <meta name="twitter:image" content="https://i.imgur.com/sGkrHkg.png" />
     <meta name="twitter:url" content="https://dehilft.de" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -37,6 +37,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script
+      defer
+      data-domain="dehilft.de"
+      src="https://analytics.findnlink.com/js/plausible.js"
+    ></script>
+
     <title>DE hilft</title>
   </head>
   <body>
